--- a/Client/Client/Client.csproj
+++ b/Client/Client/Client.csproj
@@ -51,8 +51,26 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Help.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Help.Designer.cs">
+      <DependentUpon>Help.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SChartcs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SChartcs.Designer.cs">
+      <DependentUpon>SChartcs.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SWindow.Designer.cs">
+      <DependentUpon>SWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Window.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,6 +79,9 @@
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Help.resx">
+      <DependentUpon>Help.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -71,6 +92,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SChartcs.resx">
+      <DependentUpon>SChartcs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SWindow.resx">
+      <DependentUpon>SWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Window.resx">
       <DependentUpon>Window.cs</DependentUpon>
     </EmbeddedResource>
