--- a/Client/Client/Client.csproj
+++ b/Client/Client/Client.csproj
@@ -46,6 +46,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Calsulations.cs" />
+    <Compile Include="Draw.cs" />
+    <Compile Include="EURUSD.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EURUSD.Designer.cs">
+      <DependentUpon>EURUSD.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,6 +70,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="readFile.cs" />
+    <Compile Include="Report.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Report.Designer.cs">
+      <DependentUpon>Report.cs</DependentUpon>
+    </Compile>
     <Compile Include="SChartcs.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +94,9 @@
     <Compile Include="Window.Designer.cs">
       <DependentUpon>Window.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="EURUSD.resx">
+      <DependentUpon>EURUSD.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -96,6 +112,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Report.resx">
+      <DependentUpon>Report.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SChartcs.resx">
       <DependentUpon>SChartcs.cs</DependentUpon>
     </EmbeddedResource>
