Изменить минимум и максимум, среднию линию, сделка интернет запрос

--- a/Client/Client/App.config
+++ b/Client/Client/App.config
@@ -4,7 +4,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Client.Properties.Settings.ConnectionString" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Forex.ldf;Integrated Security=True;Connect Timeout=30"
+        <add name="Client.Properties.Settings.БДConnectionString" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\саша\Documents\БД.mdf;Integrated Security=True;Connect Timeout=30"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
